@@ -166,6 +166,12 @@ int rrr_http_part_header_field_push_and_replace (
 		const char *name,
 		const char *value
 );
+int rrr_http_part_header_field_push_subvalue (
+		struct rrr_http_part *part,
+		const char *field,
+		const char *name,
+		const char *value
+);
 int rrr_http_part_fields_iterate_const (
 		const struct rrr_http_part *part,
 		int (*callback)(const struct rrr_http_field *field, void *callback_arg),
