@@ -243,6 +243,14 @@ int rrr_http_transaction_request_content_type_set (
 	return rrr_http_part_header_field_push_and_replace (transaction->request_part, "content-type", content_type);
 }
 
+int rrr_http_transaction_request_content_type_directive_set (
+		struct rrr_http_transaction *transaction,
+		const char *name,
+		const char *value
+) {
+	return rrr_http_part_header_field_push_subvalue(transaction->request_part, "content-type", name, value);
+}
+
 int rrr_http_transaction_endpoint_path_get (
 		char **result,
 		struct rrr_http_transaction *transaction
