@@ -119,6 +119,11 @@ int rrr_http_transaction_request_content_type_set (
 		struct rrr_http_transaction *transaction,
 		const char *content_type
 );
+int rrr_http_transaction_request_content_type_directive_set (
+		struct rrr_http_transaction *transaction,
+		const char *name,
+		const char *value
+);
 int rrr_http_transaction_endpoint_path_get (
 		char **result,
 		struct rrr_http_transaction *transaction
