@@ -21,6 +21,8 @@ rrr (1.23-3) bullseye; urgency=medium
       fails in IP module
     * Extract boundary directive from content-type fields of type
       multipart/form-data in httpserver
+    * New configuration parameter in httpclient to set content-type boundary
+      directive in incoming messages.
 
   * Fixes:
     * Prevent HTTP client from getting killed of if there are a lot of
